# zoom_r

./: Cargo.toml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/domain/: error.rs  participant.rs  room.rs
src/handlers/: room.rs  webrtc.rs
src/infrastructure/: connection_registry.rs  memory_room_store.rs  mod.rs  room_repository.rs
src/orchestrator/: mod.rs
src/transport/: websocket.rs
